[package]
name = "concoct"
version = "0.16.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A runtime for user-interfaces"
repository = "https://github.com/concoct-rs/concoct"

[features]
channel = ["dep:futures"]
full = ["channel"]

[dependencies]
futures = { version = "0.3.29", optional = true }
slab = "0.4.9"
slotmap = "1.0.7"
tokio = { version = "1.35.0", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1.35.0", features = ["full"] }

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "counter"
required-features = ["full"]
