[package]
name = "concoct-examples"
version = "0.1.0"
authors = ["Matt Hunzinger <matthunz2@gmail.com>"]
edition = "2018"

[features]
counter = []
text_input = []

[dependencies]
concoct = { path = "../", features = ["web"] }
dioxus-logger = "0.4.1"
log = "0.4.20"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
