[package]
name = "concoct-macros"
version = "0.2.0-alpha.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generic UI compiler and runtime library"
repository = "https://github.com/concoct-rs/concoct"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.28"
syn = { version = "2.0.22", features = ["full", "fold"] }
