[package]
name = "concoct-web"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web backend for concoct"
repository = "https://github.com/concoct-rs/concoct"

[dependencies]
# concoct = "0.17.0-alpha.2"
concoct = { path = "../concoct" }
web-sys = { version = "0.3.66", features = ["Document", "Event", "HtmlElement", "HtmlCollection", "Text", "Window"] }
