[package]
name = "concoct"
version = "0.17.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-platform UI framework"
repository = "https://github.com/concoct-rs/concoct"

[features]
full = []

[dependencies]
futures = "0.3.30"
rustc-hash = "1.1.0"
slotmap = "1.0.7"
tracing = "0.1.40"

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]
