[package]
name = "concoct-counter"
version = "0.1.0"
authors = ["Matt Hunzinger <matthunz2@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
concoct = { path = "../../" }
slotmap = "1.0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
