[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
accesskit = "0.8.1"
concoct = { path = "../../" }
futures = "0.3.26"
reqwest = { version = "0.11.14", features = ["json"] }
rust_decimal = "1.28.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
taffy = "0.2.2"
tokio = "1.25.0"
tokio-stream = "0.1.11"
winit = "0.27.5"

[target.'cfg(target_os = "linux")'.dependencies]
skia-safe = { version = "0.58.0", features = ["all-linux"] }

[target.'cfg(target_os = "macos")'.dependencies]
skia-safe = { version = "0.58.0", features = ["all-macos"] }

[target.'cfg(target_os = "windows")'.dependencies]
skia-safe = { version = "0.58.0", features = ["all-windows"] }

[target.'cfg(target_os = "android")'.dependencies]
skia-safe = { version = "0.58.0", features = ["gl"] }
