[package]
name = "concoct-web-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
concoct = { path = "../../", features = ["web"] }
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
log = "0.4.20"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
